# upstray

./: .gitignore  Cargo.toml  README.md  TODO.md  build.rs
cpp/: app.cpp  app.h
packaging/: PKGBUILD
qml/: Theme.qml  main.qml
qml/components/: Card.qml  ChargeRing.qml  DetailRow.qml  DetailsTab.qml  FlowArrow.qml  FlowCell.qml  GlowOverlay.qml  Hero.qml  MonitorTab.qml  ResizeEdges.qml  SectionHeading.qml  SettingsTab.qml  StatCard.qml  TabIcon.qml  TabStrip.qml  ThemedButton.qml  ThemedCombo.qml  ThemedField.qml  TitleBar.qml  ToggleSwitch.qml
resources/: upstray.desktop
src/: backend.rs  config.rs  main.rs  notifier.rs  poller.rs  ups_state.rs
