[package]
name = "upstray"
version = "0.4.0"
edition = "2021"
description = "A modern KDE system tray monitor for Network UPS Tools"
license = "GPL-3.0-or-later"

[dependencies]
cxx = "1.0.194"
cxx-qt = "0.8.1"
cxx-qt-lib = "0.8.1"

rups = { version = "0.6.1", features = ["async"] }
tokio = { version = "1.49", features = ["rt-multi-thread", "time", "sync", "macros"] }

zbus = { version = "5.14.0", default-features = false, features = ["tokio"] }
serde = { version = "1.0.228", features = ["derive"] }
toml = "0.8"
dirs = "6.0"

tracing = "0.1.44"
tracing-subscriber = "0.3.22"

[build-dependencies]
cxx-build = "1.0.194"
cxx-qt-build = { version = "0.8.1" }

[features]
link_qt_object_files = ["cxx-qt-build/link_qt_object_files"]

[profile.release]
lto = true
strip = true
